--- a/index.html
+++ b/index.html
@@ -127,20 +127,25 @@
                         </div>
 
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            <div class="carousel-item active position-relative">
                                 <img class="w-100" src="./assets/img/media/Poster-for-Squad.png" alt="Media">
+                                <span class="badge position-absolute badge-pos">Spotlight</span>
                             </div>
-                            <div class="carousel-item">
-                                <img class="w-100" src="./assets/img/media/awake-2021-Netflix.jpg" alt="Media">
+                            <div class="carousel-item position-relative">
+                                <img class="w-100" src="./assets/img/media/awake-2021-Netflix.jpg" alt="Media"><span
+                                    class="badge position-absolute badge-pos">Spotlight</span>
                             </div>
-                            <div class="carousel-item">
-                                <img class="w-100" src="./assets/img/media/wolfman.jpg" alt="Media">
+                            <div class="carousel-item position-relative">
+                                <img class="w-100" src="./assets/img/media/wolfman.jpg" alt="Media"><span
+                                    class="badge position-absolute badge-pos">Spotlight</span>
                             </div>
-                            <div class="carousel-item">
-                                <img class="w-100" src="./assets/img/media/zodiac.jpg" alt="Media">
+                            <div class="carousel-item position-relative">
+                                <img class="w-100" src="./assets/img/media/zodiac.jpg" alt="Media"><span
+                                    class="badge position-absolute badge-pos">Spotlight</span>
                             </div>
-                            <div class="carousel-item">
-                                <img class="w-100" src="./assets/img/media/film.jpg" alt="Media">
+                            <div class="carousel-item position-relative">
+                                <img class="w-100" src="./assets/img/media/film.jpg" alt="Media"><span
+                                    class="badge position-absolute badge-pos">Spotlight</span>
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carousel"
@@ -169,14 +174,19 @@
                                         class="d-flex justify-content-center col-12  col-sm-6 col-md-4 col-lg-3 col-xl p-1">
                                         <img src="assets/img/media/media1.jpg" class="w-100 scale highlight"
                                             alt="Media" />
+
                                     </div>
-                                    <div class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl">
+                                    <div
+                                        class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl position-relative">
                                         <img src="assets/img/media/media2.webp" class="w-100 scale highlight"
-                                            alt="Media" />
+                                            alt="Media" /><span class="badge position-absolute badge-pos2">New
+                                            release</span>
                                     </div>
-                                    <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
+                                    <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1 position-relative">
                                         <img src="assets/img/media/media3.webp" class="w-100 scale highlight"
-                                            alt="Media" />
+                                            alt="Media" /><span class="badge position-absolute badge-pos2">Critic's
+                                            choice
+                                        </span>
                                     </div>
                                     <div class="d-none p-1 col-lg-3 d-lg-block col-xl">
                                         <img src="assets/img/media/media4.jpg" class="w-100 scale highlight"
@@ -200,7 +210,7 @@
                                         <img src="assets/img/media/media7.webp" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
-                                    <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
+                                    <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1 ">
                                         <img src="assets/img/media/media8.webp" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
@@ -208,9 +218,10 @@
                                         <img src="assets/img/media/media9.jpg" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
-                                    <div class="d-none p-1 col-xl d-xl-block">
+                                    <div class="d-none p-1 col-xl d-xl-block position-relative">
                                         <img src="assets/img/media/media10.jpg" class="w-100 scale highlight"
-                                            alt="Media" />
+                                            alt="Media" /><span class="badge position-absolute badge-pos2">Fan
+                                            Favorite</span>
                                     </div>
                                 </div>
                             </div>
@@ -238,17 +249,19 @@
                             <div class="carousel-item active">
                                 <div class="row  row-opacity">
                                     <div
-                                        class="d-flex justify-content-center col-12  col-sm-6 col-md-4 col-lg-3 col-xl p-1">
+                                        class="d-flex justify-content-center col-12  col-sm-6 col-md-4 col-lg-3 col-xl p-1 position-relative">
                                         <img src="assets/img/media/media13.jpg" class="w-100 scale highlight"
-                                            alt="Media" />
+                                            alt="Media" /><span class="badge position-absolute badge-pos2">New This
+                                            Week</span>
                                     </div>
                                     <div class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl">
                                         <img src="assets/img/media/media30.jpg" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
-                                    <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
+                                    <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1 position-relative">
                                         <img src="assets/img/media/media20.jpg" class="w-100 scale highlight"
-                                            alt="Media" />
+                                            alt="Media" /><span class="badge position-absolute badge-pos2">New This
+                                            Week</span>
                                     </div>
                                     <div class="d-none p-1 col-lg-3 d-lg-block col-xl">
                                         <img src="assets/img/media/media18.jpg" class="w-100 scale highlight"
@@ -268,9 +281,11 @@
                                         <img src="assets/img/media/media21.webp" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
-                                    <div class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl">
+                                    <div
+                                        class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl position-relative">
                                         <img src="assets/img/media/media17.jpg" class="w-100 scale highlight"
-                                            alt="Media" />
+                                            alt="Media" /><span class="badge position-absolute badge-pos2">Cult
+                                            Classic</span>
                                     </div>
                                     <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
                                         <img src="assets/img/media/media5.webp" class="w-100 scale highlight"
@@ -314,9 +329,10 @@
                                         <img src="assets/img/media/media1.jpg" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
-                                    <div class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl">
+                                    <div class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl ">
                                         <img src="assets/img/media/media3.webp" class="w-100 scale highlight"
                                             alt="Media" />
+
                                     </div>
                                     <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
                                         <img src="assets/img/media/media7.webp" class="w-100 scale highlight"
@@ -326,9 +342,10 @@
                                         <img src="assets/img/media/media9.jpg" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
-                                    <div class="d-none p-1 col-xl d-xl-block">
+                                    <div class="d-none p-1 col-xl d-xl-block position-relative">
                                         <img src="assets/img/media/media11.jpg" class="w-100 scale highlight"
-                                            alt="Media" />
+                                            alt="Media" /><span class="badge position-absolute badge-pos2">Epic
+                                            Saga</span>
                                     </div>
                                 </div>
                             </div>
@@ -340,9 +357,11 @@
                                         <img src="assets/img/media/media2.webp" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
-                                    <div class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl">
+                                    <div
+                                        class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl position-relative">
                                         <img src="assets/img/media/media4.jpg" class="w-100 scale highlight"
-                                            alt="Media" />
+                                            alt="Media" /><span class="badge position-absolute badge-pos2">Fan
+                                            Favorite</span>
                                     </div>
                                     <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
                                         <img src="assets/img/media/media6.jpg" class="w-100 scale highlight"
@@ -388,9 +407,11 @@
                                                 <img src="assets/img/media/media23.webp" class="w-100 scale highlight"
                                                     alt="Media" />
                                             </div>
-                                            <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
+                                            <div
+                                                class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1 position-relative">
                                                 <img src="assets/img/media/media20.jpg" class="w-100 scale highlight"
-                                                    alt="Media" />
+                                                    alt="Media" /><span class="badge position-absolute badge-pos2">Fan
+                                                    Favorite</span>
                                             </div>
                                             <div class="d-none p-1 col-lg-3 d-lg-block col-xl">
                                                 <img src="assets/img/media/media6.jpg" class="w-100 scale highlight"
@@ -459,13 +480,21 @@
                                                         <img src="assets/img/media/media32.jpg"
                                                             class="w-100 scale highlight" alt="Media" />
                                                     </div>
-                                                    <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
+                                                    <div
+                                                        class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1 position-relative">
                                                         <img src="assets/img/media/media23.webp"
                                                             class="w-100 scale highlight" alt="Media" />
+                                                        <span class="badge position-absolute badge-pos2">Must
+                                                            Watch</span>
+
                                                     </div>
-                                                    <div class="d-none p-1 col-lg-3 d-lg-block col-xl">
+                                                    <div
+                                                        class="d-none p-1 col-lg-3 d-lg-block col-xl position-relative">
                                                         <img src="assets/img/media/media31.webp"
                                                             class="w-100 scale highlight" alt="Media" />
+                                                        <span class="badge position-absolute badge-pos2">Must
+                                                            Watch</span>
+
                                                     </div>
                                                     <div class="d-none p-1 col-xl d-xl-block">
                                                         <img src="assets/img/media/media17.jpg"
@@ -494,9 +523,12 @@
                                                         <img src="assets/img/media/media14.webp"
                                                             class="w-100 scale highlight" alt="Media" />
                                                     </div>
-                                                    <div class="d-none p-1 col-xl d-xl-block">
+                                                    <div class="d-none p-1 col-xl d-xl-block position-relative">
                                                         <img src="assets/img/media/media1.jpg"
                                                             class="w-100 scale highlight" alt="Media" />
+                                                        <span class="badge position-absolute badge-pos2">Must
+                                                            Watch</span>
+
                                                     </div>
                                                 </div>
                                             </div>
