--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PROFILE - NETFLIX CLONE</title>
+    <title>Profile - NETFLIX CLONE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/personal.css"> <!--PERSONAL CSS-->
@@ -101,6 +101,19 @@
                                     <button class="btn rounded-0 btn-outline-secondary btn-lg ls-3 ">
                                         <span class="fs-5 px-1"> DELETE PROFILE</span>
                                     </button>
+                                </div>
+                            </div>
+                            <div class="col-12 d-flex justify-content-between">
+                                <div class="row mt-5"><a href="./index.html" class="bg-personal border-0"
+                                        style="text-decoration: none"> <span class="text-secondary">
+                                            <i class="bi bi-house-door-fill"></i> Back to Home</span>
+                                    </a></div>
+                                <div class="row mt-5">
+                                    <a href="./settings.html" class="bg-personal border-0"
+                                        style="text-decoration: none"> <span class="text-secondary">
+                                            <i class="bi bi-gear"></i> Go to
+                                            settings</span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
