--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                             alt="Media" />
                                     </div>
                                     <div class="d-none p-1 col-lg-3 d-lg-block col-xl">
-                                        <img src="assets/img/media/media19.webp" class="w-100 scale highlight"
+                                        <img src="assets/img/media/media22.webp" class="w-100 scale highlight"
                                             alt="Media" />
                                     </div>
                                     <div class="d-none p-1 col-xl d-xl-block">
@@ -427,13 +427,16 @@
                                     <div class="carousel-item">
                                         <div class="row row-opacity">
                                             <div
-                                                class="d-flex justify-content-center col-12 p-1 col-sm-6 col-md-4 col-lg-3 col-xl">
+                                                class="d-flex justify-content-center col-12 p-1 col-sm-6 col-md-4 col-lg-3 col-xl position-relative">
                                                 <img src="assets/img/media/media12.jpg" class="w-100 scale highlight"
-                                                    alt="Media" />
+                                                    alt="Media" /><span
+                                                    class="badge position-absolute badge-pos2">Highly Recommended</span>
                                             </div>
-                                            <div class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl">
+                                            <div
+                                                class="d-none p-1 col-sm-6 d-sm-block col-md-4 col-lg-3 col-xl position-relative">
                                                 <img src="assets/img/media/media15.jpg" class="w-100 scale highlight"
-                                                    alt="Media" />
+                                                    alt="Media" /><span
+                                                    class="badge position-absolute badge-pos2">Highly Recommended</span>
                                             </div>
                                             <div class="d-none col-md-4 d-md-block col-lg-3 col-xl p-1">
                                                 <img src="assets/img/media/media4.jpg" class="w-100 scale highlight"
