fix vari con validator

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class=" col-12 p-0">
                     <nav class="navbar navbar-expand-lg ms-2">
                         <div class="container-fluid p-0">
-                            <a class=" navbar-brand" href="#"><img id="netflix_logo"
-                                    src="./assets/img/netflix_logo.png" /></a>
+                            <a class=" navbar-brand" href="#"><img id="netflix_logo" src="./assets/img/netflix_logo.png"
+                                    alt="logo" /></a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -51,30 +51,31 @@
                                 <div
                                     class="ms-auto d-lg-flex justify-content-end align-content-center d-none d-lg-block">
                                     <ul class="navbar-nav navbarFont">
-                                        <li class="nav-item pe-lg-1 nav-link text-white pe-lg-4">
-                                            <a href="#" class="text-white-50"><i class=" bi bi-search"></i></a>
+                                        <li class="nav-item pe-lg-1 text-white pe-lg-4">
+                                            <a href="#" class="nav-link text-white-50"><i class="bi bi-search"></i></a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link red-personal red-hover-personal" href="#">KIDS</a>
                                         </li>
-                                        <li class="nav-item pe-lg-1 nav-link px-lg-4">
-                                            <a href="#" class="text-white-50"><i class="bi bi-bell-fill"></i></a>
+                                        <li class="nav-item pe-lg-1 px-lg-4">
+                                            <a href="#" class="nav-link text-white-50"><i
+                                                    class="bi bi-bell-fill"></i></a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link text-white ps-lg-4 pe-lg-1" href="#"><img id="avatarpng"
                                                     src="./assets/img/avatar.png" alt="kids"></a>
                                         </li>
-                                        <div class="dropdown pt-1">
+                                        <li class="nav-item dropdown pt-1">
                                             <button class="btn text-white dropdown-toggle ps-1" type="button"
                                                 data-bs-toggle="dropdown" aria-expanded="false">
                                             </button>
-                                            <ul class="dropdown-menu bg-dark ">
-                                                <li><a class=" dropdown-item text-white" href="./profile.html"><i
+                                            <ul class="dropdown-menu bg-dark">
+                                                <li><a class="dropdown-item text-white" href="./profile.html"><i
                                                             class="bi bi-person red-personal"></i> Profile</a></li>
                                                 <li><a class="dropdown-item text-white" href="./settings.html"><i
                                                             class="bi bi-gear red-personal"></i> Settings</a></li>
                                             </ul>
-                                        </div>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -90,8 +91,8 @@
                 <div class="col-12 d-flex  align-items-center">
                     <h2 class="text-white me-2 me-lg-4 fs-1"><span class="red-personal">TV</span> Shows</h2>
                     <div class=" dropdown">
-                        <button id="genres" class="btn red-personal dropdown-toggle fs-4" type=" button"
-                            data-bs-toggle="dropdown" aria-expanded="false">Genres
+                        <button id="genres" class="btn red-personal dropdown-toggle fs-4" data-bs-toggle="dropdown"
+                            aria-expanded="false">Genres
                         </button>
                         <ul class="dropdown-menu bg-dark">
                             <li><a class="dropdown-item text-white fs-5" href="#">Action</a></li>
@@ -548,9 +549,8 @@
                                     </div>
                                     <div class="col-12 d-flex justify-content-end">
                                         <div class="row mt-2">
-                                            <a href="#top" class="bg-personal border-0"
-                                                style="text-decoration: none; color: inherit;">
-                                                <i class="bi bi-arrow-up-square-fill red-personal fs-1"></i>
+                                            <a href="#top" class="bg-personal border-0 text-decoration-none">
+                                                <i class="bi bi-arrow-up-square-fill grey-personal hover-i fs-1 "></i>
                                             </a>
                                         </div>
                                     </div>
