--- a/profile.html
+++ b/profile.html
@@ -12,8 +12,9 @@
 </head>
 
 <body class="bg-personal mb-5">
-    <header class="mb-5"><a href="./index.html"><img id="netflix_logo2" src=" ./assets/img/netflix_logo.png"
-                alt="netflix logo" /></a></header>
+    <header class="mb-5">
+        <a href="./index.html"><img id="netflix_logo2" src=" ./assets/img/netflix_logo.png" alt="netflix logo" /></a>
+    </header>
     <main>
         <div class="container d-flex justify-content-center">
             <div class="row w-100 justify-content-center">
@@ -41,8 +42,8 @@
                                     <div>
                                         <p class="fs-4 mb-1 text-white">Language:</p>
                                         <div class="dropdown pt-1">
-                                            <button
-                                                class="btn text-white dropdown-toggle bg-black border rounded-0 ps-2  fs-5"
+                                            <button id="borderfix"
+                                                class="btn text-white dropdown-toggle bg-black ps-2  fs-5 "
                                                 type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 English
                                             </button>
@@ -82,8 +83,8 @@
                                     <div class="custom-checkbox d-flex align-items-center my-3 ">
                                         <input id="checkbox2" class="styled me-2" type="checkbox">
                                         <label for="checkbox2">
-                                            <span class="text-white "> Autoplay next episode in a series on all
-                                                devices.</span>
+                                            <span class="text-white "> Allow previews while browsing on all
+                                                devices</span>
                                         </label>
                                     </div>
 
@@ -104,20 +105,26 @@
                                 </div>
                             </div>
                             <div class="col-12 d-flex justify-content-between">
-                                <div class="row mt-5"><a href="./index.html" class="bg-personal border-0"
-                                        style="text-decoration: none"> <span class="text-secondary">
+                                <div class="row mt-5"><a href="./index.html"
+                                        class="bg-personal2 border-0 text-decoration-none">
+                                        <span class="text-secondary">
                                             <i class="bi bi-house-door-fill"></i> Back to Home</span>
                                     </a></div>
                                 <div class="row mt-5">
-                                    <a href="./settings.html" class="bg-personal border-0"
-                                        style="text-decoration: none"> <span class="text-secondary">
-                                            <i class="bi bi-gear"></i> Go to
-                                            settings</span>
+                                    <a href="./settings.html" class="bg-personal2 border-0 text-decoration-none">
+                                        <span class="text-secondary">
+                                            <i class="bi bi-gear"></i> Go to settings
+                                        </span>
                                     </a>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
