--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <!--MI RENDO CONTO CHE CICLANDO PARECCHIE COSE AVREI RISPARMIATO PARECCHIE RIGHE DI CODIDCE, PER QUESTIONI DI TEMPO HO OPTATO PER COPIA INCOLLA VARI PER LE COSE RIPETUTE-->
 
-<body class="bg-personal mt-2 mb-5">
+<body class="bg-personal mt-2 mb-5 mx-5">
     <header>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class=" col-12 p-0">
                     <nav class="navbar navbar-expand-lg ms-2">
@@ -49,20 +49,20 @@
                                     </li>
                                 </ul>
                                 <div
-                                    class="ms-auto d-lg-flex justify-content-end align-content-center d-none d-lg-block">
+                                    class="ms-auto pe-5 d-lg-flex justify-content-end align-content-center d-none d-lg-block">
                                     <ul class="navbar-nav navbarFont">
-                                        <li class="nav-item pe-lg-1 text-white pe-lg-4">
+                                        <li class="nav-item  text-white pe-lg-2">
                                             <a href="#" class="nav-link text-white-50"><i class="bi bi-search"></i></a>
                                         </li>
-                                        <li class="nav-item">
+                                        <li class="nav-item pe-lg-2">
                                             <a class="nav-link red-personal red-hover-personal" href="#">KIDS</a>
                                         </li>
-                                        <li class="nav-item pe-lg-1 px-lg-4">
+                                        <li class="nav-item pe-lg-2">
                                             <a href="#" class="nav-link text-white-50"><i
                                                     class="bi bi-bell-fill"></i></a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-white ps-lg-4 pe-lg-1" href="#"><img id="avatarpng"
+                                        <li class="nav-item pe-lg-1">
+                                            <a class="nav-link text-white " href="#"><img id="avatarpng"
                                                     src="./assets/img/avatar.png" alt="kids"></a>
                                         </li>
                                         <li class="nav-item dropdown pt-1">
@@ -86,8 +86,8 @@
         </div>
     </header>
     <main>
-        <div class="container d-flex justify-content-between mt-3 mt-lg-5 mb-5">
-            <div class="row d-flex">
+        <div class="container-fluid d-flex justify-content-between mt-3 mt-lg-5 mb-5">
+            <div class="row d-flex ">
                 <div class="col-12 d-flex  align-items-center">
                     <h2 class="text-white me-2 me-lg-4 fs-1"><span class="red-personal">TV</span> Shows</h2>
                     <div class=" dropdown">
@@ -107,12 +107,12 @@
                 <i class=" bi bi-grid-fill red-personal red-hover-personal fs-3 mx-1 px-2 border"></i>
             </div>
         </div>
-        <div class="container mb-5">
-            <div class="row">
+        <div class="container-fluid mb-5">
+            <div class="row d-flex justify-content-center">
                 <div class="col-12 mb-1 mt-lg-2">
                     <h3 id="top" class="text-white fs-2"><span class="red-personal">Trending</span> now</h3>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-lg-10">
                     <div id="carousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"
@@ -563,7 +563,7 @@
         </div>
     </main>
     <footer>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
