--- a/settings.html
+++ b/settings.html
@@ -3,23 +3,27 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Settings - NETFLIX CLONE</title>
+    <meta name="viewport" content="width=device-width, initial-scale highlight=1">
+    <title>NETFLIX CLONE</title>
+    <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--BOOTSTRAP-->
     <link rel="stylesheet" href="./assets/css/personal.css"><!--PERSONAL CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--ICONE BOOTSTRAP-->
 </head>
+<!--MI RENDO CONTO CHE CICLANDO PARECCHIE COSE AVREI RISPARMIATO PARECCHIE RIGHE DI CODIDCE, PER QUESTIONI DI TEMPO HO OPTATO PER COPIA INCOLLA VARI PER LE COSE RIPETUTE-->
 
-<body class="bg-personal mt-2 mb-5">
+<body class="bg-personal mt-2 mb-5 mx-5">
     <header>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class=" col-12 p-0">
                     <nav class="navbar navbar-expand-lg ms-2">
                         <div class="container-fluid p-0">
-                            <a class=" navbar-brand" href="#"><img id="netflix_logo"
-                                    src="./assets/img/netflix_logo.png" /></a>
+                            <a class=" navbar-brand" href="#"><img id="netflix_logo" src="./assets/img/netflix_logo.png"
+                                    alt="logo" /></a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -31,8 +35,8 @@
                                         <a class="nav-link text-white-50 pb-sm-0" aria-current="page" href="#">Home</a>
                                     </li>
                                     <li class="nav-item pe-lg-1">
-                                        <a class="nav-link text-white-50 pb-sm-0" href="#">
-                                            Tv Shows</a>
+                                        <a class="nav-link active fw-bold pb-sm-0" href="#"><span
+                                                class="red-hover-personal">Tv Shows</span></a>
                                     </li>
                                     <li class="nav-item pe-lg-1">
                                         <a class="nav-link text-white-50 pb-sm-0" href="#">Movies</a>
@@ -45,33 +49,33 @@
                                     </li>
                                 </ul>
                                 <div
-                                    class="ms-auto d-lg-flex justify-content-end align-content-center d-none d-lg-block">
+                                    class="ms-auto pe-5 d-lg-flex justify-content-end align-content-center d-none d-lg-block">
                                     <ul class="navbar-nav navbarFont">
-                                        <li class="nav-item pe-lg-1 nav-link text-white pe-lg-4">
-                                            <a href="#" class="text-white-50"><i class=" bi bi-search"></i></a>
+                                        <li class="nav-item  text-white pe-lg-2">
+                                            <a href="#" class="nav-link text-white-50"><i class="bi bi-search"></i></a>
                                         </li>
-                                        <li class="nav-item">
+                                        <li class="nav-item pe-lg-2">
                                             <a class="nav-link red-personal red-hover-personal" href="#">KIDS</a>
                                         </li>
-                                        <li class="nav-item pe-lg-1 nav-link px-lg-4">
-                                            <a href="#" class="text-white-50"><i class="bi bi-bell-fill"></i></a>
+                                        <li class="nav-item pe-lg-2">
+                                            <a href="#" class="nav-link text-white-50"><i
+                                                    class="bi bi-bell-fill"></i></a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link text-white ps-lg-4 pe-lg-1" href="#"><img id="avatarpng"
+                                        <li class="nav-item pe-lg-1">
+                                            <a class="nav-link text-white " href="#"><img id="avatarpng"
                                                     src="./assets/img/avatar.png" alt="kids"></a>
                                         </li>
-                                        <div class="dropdown pt-1">
+                                        <li class="nav-item dropdown pt-1">
                                             <button class="btn text-white dropdown-toggle ps-1" type="button"
                                                 data-bs-toggle="dropdown" aria-expanded="false">
                                             </button>
-                                            <ul class="dropdown-menu bg-dark ">
-                                                <li><a class=" dropdown-item text-white" href="./index.html"><i
-                                                            class="bi bi-house-door-fill red-personal"></i> Home</a>
-                                                </li>
+                                            <ul class="dropdown-menu bg-dark">
                                                 <li><a class="dropdown-item text-white" href="./profile.html"><i
                                                             class="bi bi-person red-personal"></i> Profile</a></li>
+                                                <li><a class="dropdown-item text-white" href="./settings.html"><i
+                                                            class="bi bi-gear red-personal"></i> Settings</a></li>
                                             </ul>
-                                        </div>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -81,7 +85,10 @@
             </div>
         </div>
     </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+
+    <!--SCRIPT BOOTSTRAP-->
+
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
