--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <!--MI RENDO CONTO CHE CICLANDO PARECCHIE COSE AVREI RISPARMIATO PARECCHIE RIGHE DI CODIDCE, PER QUESTIONI DI TEMPO HO OPTATO PER COPIA INCOLLA VARI PER LE COSE RIPETUTE-->
 
-<body class="bg-personal mt-2 mb-5 mx-5">
+<body class="bg-personal mb-5 ">
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid px-5">
             <div class="row">
                 <div class=" col-12 p-0">
                     <nav class="navbar navbar-expand-lg ms-2">
